easystogu/eweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-eweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easystogu-eweb
  template:
    metadata:
      labels:
        app: easystogu-eweb
    spec:
      containers:
      - name: easystogu-eweb
        image: eyaweiw.cn:5000/easystogu-eweb:2.0.0-snapshot 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
