easystogu/eweb/istio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-eweb-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easystogu-eweb
      version: v2
  template:
    metadata:
      labels:
        app: easystogu-eweb
        version: v2
    spec:
      containers:
      - name: easystogu-eweb
        image: eyaweiw.cn:5000/easystogu-eweb:2.0.0-snapshot 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
