easystogu/eweb/service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: easystogu-eweb-loadbalancer
  labels:
    app: easystogu-eweb
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.56.191
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30005
      protocol: TCP
  selector:
    app: easystogu-eweb
  externalTrafficPolicy: Local
