easystogu/eweb/service-nodeport.yml
---
# Define a 'Service' To Expose postgres to Other Services
apiVersion: v1
kind: Service
metadata:
  name: easystogu-eweb-nodeport
  labels:
    app: easystogu-eweb
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30006
      protocol: TCP
  selector:
    app: easystogu-eweb
