easystogu/eweb/istio-destinationRule.yaml
##easystogu DestinationRule
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: easystogu-eweb
spec:
  host: easystogu-eweb
  subsets:
  - name: v2
    labels:
      version: v2
