easystogu/eweb/istio-virtualService.yaml
##easystogu VirtualService
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: easystogu-eweb
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /eweb
    route:
    - destination:
        host: easystogu-eweb
        port:
          number: 8080
